[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Pelican.png" type="Texture" id=1]
[ext_resource path="res://Main Game Scene/Enemy2.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="Enemy2" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Position" type="Node2D" parent="."]
position = Vector2( 6, 4 )

[node name="Position2" type="Node2D" parent="."]
position = Vector2( -6, 4 )
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
